# pytest_plawright_tryouts

./: pyproject.toml  setup.cfg
tests/: test_web.py
